methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:19: error: Unmatched closing brace '}' ignored here
}
^