methods.returning.MethodsReturning.scala.code
var vuBiscuit = false

def haveBaggle():Boolean = {
  for(i <- 1 to 6){
  	avance()
  	if(estSurBiscuit){
    	return true
    }
  }
  for(i<- 1 to 6){
    recule()
  }
  	
    
  }
}
